--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ search_provider          : algolia
 lunr:
   search_within_pages    : true #false (default)
 algolia:
-  application_id         : OSTKPDGUC8
-  index_name             : test
-  search_only_api_key    : 3a88252dfda117190ce491fba0c77675
+  application_id         : "OSTKPDGUC8"
+  index_name             : "test"
+  search_only_api_key    : "3a88252dfda117190ce491fba0c77675"
   powered_by             : # true (default), false
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
