--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ search_provider          : lunr (default), algolia, google
 lunr:
   search_within_pages    : true #false (default)
 algolia:
-  application_id         : # YOUR_APPLICATION_ID
-  index_name             : # YOUR_INDEX_NAME
-  search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
+  application_id         : # YOSTKPDGUC8
+  index_name             : # allaboutazure-tr
+  search_only_api_key    : # Y3a88252dfda117190ce491fba0c77675
   powered_by             : # true (default), false
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
